fix: text-wrap no longer causes tooltip to position incorrectly, custom colour theme now correctly applies background colour

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,8 +1,10 @@
-.TeReoToolTip:not(.DarkTheme) {
+.TeReoToolTip {
     border-bottom: 1px dashed rgba(0, 0, 0, 0.349);
+    // Will this break flow?
+    display: inline-block;
 }
 
-.TeReoToolTip:not(.DarkTheme):before {
+.TeReoToolTip:before {
     content: attr(data-originaltext);
     position: absolute;
     padding: 5px;
@@ -12,10 +14,10 @@
     text-align: center;
     display: none;
     transform: translateY(-30px);
-
+    white-space: nowrap;
 }
 
-.TeReoToolTip:not(.DarkTheme):hover:before {
+.TeReoToolTip:hover:before {
     display: inline-block;
 }
 
@@ -36,6 +38,27 @@
 }
 
 .DarkTheme.TeReoToolTip:hover:before {
+    display: inline-block;
+}
+
+.CustomTheme.TeReoToolTip {
+    border-bottom: 1px dashed rgba(0, 0, 0, 0.349);
+}
+
+.CustomTheme.TeReoToolTip:before {
+    content: attr(data-originaltext);
+    position: absolute;
+    padding: 5px;
+    border-radius: 10px;
+    background: var(---tooltip-customhexcode);
+    color: rgba(27, 27, 27, 0.9);
+    text-align: center;
+    display: none;
+    transform: translateY(-30px);
+
+}
+
+.CustomTheme.TeReoToolTip:hover:before {
     display: inline-block;
 }
 
